--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <title>crunchyguess</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <style>
+      body {
+        background: #303030;
+      }
+    </style>
   </head>
   <body>
     <noscript>
